# persephone

./: .dockerignore  .gitignore  Persephone.md  README.md  compose.yaml  pyproject.toml
configs/examples/: README.md  airline_delay.yaml  dependency_workflow.yaml  heat_diffusion.yaml  heat_diffusion_large.yaml  market_stress.yaml  river_flood.yaml  sir_epidemic.yaml  sir_p_infect_sweep.yaml  us_county_epidemic.yaml
configs/examples/data/: sir_contact_edges.csv
docker/: api.Dockerfile  ui.Dockerfile
docs/: api-reference.md  config-reference.md  core-architecture.md  docker.md  domain-agnostic-platform.md  exporting-results.md  frame-contract.md  frame-streaming.md  heat-diffusion-plugin.md  plugin-authoring.md  release-v0.1.md  release-v0.2.md  run-comparison.md  runtime-interface.md  studio-ui.md  sweeps.md  ui-guide.md
docs/examples/: v1-baseline.md
docs/superpowers/plans/: 2026-05-22-real-dataset-plugins.md  2026-05-22-run-analysis-narrative-refactor.md  2026-05-22-v4-checkpoints-4-6-a-scope.md
docs/superpowers/specs/: 2026-05-22-real-dataset-plugins-design.md
docs/tasks/: v1_tasks.md  v2_tasks.md  v3_tasks.md  v4_run_workbench_design_refs.md  v4_tasks.md  v5_tasks.md
plugins/persephone-plugin-airline-delay/: pyproject.toml
plugins/persephone-plugin-airline-delay/src/persephone_airline_delay/: __init__.py  dataset.py  model.py  observer.py  renderer.py  solver.py  world.py
plugins/persephone-plugin-airline-delay/src/persephone_airline_delay/data/: airports.csv  routes.csv
plugins/persephone-plugin-dependency-workflow/: pyproject.toml
plugins/persephone-plugin-dependency-workflow/src/persephone_dependency_workflow/: __init__.py  model.py  observer.py  renderer.py  solver.py  world.py
plugins/persephone-plugin-heat-diffusion/: pyproject.toml
plugins/persephone-plugin-heat-diffusion/src/persephone_heat_diffusion/: __init__.py  initial_conditions.py  observer.py  renderer.py  solver.py  world.py
plugins/persephone-plugin-market-stress/: pyproject.toml
plugins/persephone-plugin-market-stress/src/persephone_market_stress/: __init__.py  model.py  observer.py  renderer.py  solver.py  world.py
plugins/persephone-plugin-river-flood/: pyproject.toml
plugins/persephone-plugin-river-flood/src/persephone_river_flood/: __init__.py  dataset.py  model.py  observer.py  renderer.py  solver.py  world.py
plugins/persephone-plugin-river-flood/src/persephone_river_flood/data/: gauges.csv  network.csv
plugins/persephone-plugin-sir-epidemic/: pyproject.toml
plugins/persephone-plugin-sir-epidemic/src/persephone_sir_epidemic/: __init__.py  model.py  observer.py  renderer.py  solver.py  world.py
plugins/persephone-plugin-sir-epidemic/src/persephone_sir_epidemic/data/: default_edges.csv
plugins/persephone-plugin-us-county-epidemic/: pyproject.toml
plugins/persephone-plugin-us-county-epidemic/src/persephone_us_county_epidemic/: __init__.py  dataset.py  observer.py  renderer.py  solver.py  world.py
runs-test-us-county/verify-us-county/: events.jsonl  manifest.json  metrics.jsonl
runs-test-us-county/verify-us-county-2/: events.jsonl  final_state.json  manifest.json  metrics.jsonl
runs-test-us-county/verify-us-county-2/frames/: frames.jsonl  index.json
runs-test-us-county/verify-us-county-registered/: events.jsonl  final_state.npz  manifest.json  metrics.jsonl
runs-test-us-county/verify-us-county-registered/frames/: frames.jsonl  index.json
runs-test-us-county/verify-us-county/frames/: frames.jsonl  index.json
scripts/: generate_airline_data.py
sdk/: pyproject.toml
sdk/src/persephone_sdk/: __init__.py  plugin.py  testing.py  types.py
src/persephone/: compare.py  export.py  fields.py  frames.py  scaffold.py  sweeps.py
src/persephone/api/: __init__.py  app.py  manager.py  schemas.py
src/persephone/api/routes/: compare.py  examples.py  exports.py  frames.py  health.py  plugins.py  runs.py  sweeps.py
src/persephone/cli/: __init__.py  main.py
src/persephone/config/: __init__.py  load.py  models.py  schema.py
src/persephone/core/: __init__.py  bus.py  checkpoints.py  coupling.py  engine.py  explanations.py  frames.py  interpretation.py  records.py  run.py  scheduler.py  wrappers.py
src/persephone/registry/: __init__.py  registry.py
src/persephone/runtime/: __init__.py  interface.py
src/persephone/solvers/: __init__.py  graph.py
src/persephone/storage/: __init__.py  artifacts.py  catalog.py  errors.py  explanations.py  frames.py  sinks.py
tests/: __init__.py  test_import.py
tests/api/: test_app.py  test_examples_catalog.py  test_explanations_api.py  test_exports_and_fields.py  test_frames_api.py  test_openapi_contracts.py
tests/cli/: test_checkpoint_commands.py  test_export_field_scaffold_commands.py  test_frame_commands.py  test_run_commands.py  test_sweep_compare_commands.py
tests/config/: test_cli_validate.py  test_config_loading.py
tests/core/: test_architecture_hardening.py  test_bus.py  test_compare.py  test_engine.py  test_explanations.py  test_export.py  test_field_artifacts.py  test_frame_artifacts.py  test_frames.py  test_interpretation.py  test_run_artifacts.py  test_scheduler.py  test_scheduler_frames.py  test_sweeps.py
tests/docker/: test_docker_config.py
tests/examples/: test_dependency_workflow_example.py  test_market_stress_example.py  test_sir_example.py  test_us_county_example.py
tests/platform/: test_domain_agnostic.py
tests/plugin/: test_dependency_workflow_plugin.py  test_frame_renderers.py  test_heat_diffusion_plugin.py  test_market_stress_plugin.py  test_sir_epidemic_plugin.py  test_us_county_epidemic_plugin.py
tests/plugins/: test_airline_delay.py  test_river_flood.py
tests/registry/: test_plugins_cli.py  test_registry.py
tests/runtime/: test_python_runtime.py
tests/sdk/: test_plugin_contracts.py
tests/solvers/: test_graph.py
tests/storage/: test_catalog.py
ui/: README.md  eslint.config.js  package.json  playwright.config.ts
ui/src/lib/: api.test.ts  api.ts
ui/src/lib/api-client/: client.test.ts  client.ts  (+2 more)
ui/src/routes/: +layout.svelte  +page.svelte  app.e2e.ts  layout.css
(+50 files in other folders)
