[project]
name = "persephone"
version = "0.1.0"
description = "General-purpose simulation platform engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "packaging>=24.0",
    "persephone-sdk",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "scipy>=1.13",
    "typer>=0.12",
]

[project.scripts]
persephone = "persephone.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone"]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[tool.uv.sources]
persephone-sdk = { workspace = true }

[tool.uv.workspace]
members = ["sdk"]

[tool.pytest.ini_options]
testpaths = ["tests", "sdk/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "sdk/src"]
