[project]
name = "persephone"
version = "0.1.0"
description = "General-purpose simulation platform engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "numpy>=1.26",
    "packaging>=24.0",
    "persephone-plugin-dependency-workflow",
    "persephone-plugin-sir-epidemic",
    "persephone-plugin-heat-diffusion",
    "persephone-plugin-market-stress",
    "persephone-plugin-us-county-epidemic",
    "persephone-plugin-airline-delay",
    "persephone-plugin-river-flood",
    "persephone-sdk",
    "pyarrow>=16.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "rich>=13.7",
    "scipy>=1.13",
    "typer>=0.12",
    "uvicorn>=0.32",
]

[project.scripts]
persephone = "persephone.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "types-PyYAML>=6.0",
]

[tool.uv.sources]
persephone = { workspace = true }
persephone-plugin-dependency-workflow = { workspace = true }
persephone-plugin-sir-epidemic = { workspace = true }
persephone-plugin-heat-diffusion = { workspace = true }
persephone-plugin-market-stress = { workspace = true }
persephone-plugin-us-county-epidemic = { workspace = true }
persephone-plugin-airline-delay = { workspace = true }
persephone-plugin-river-flood = { workspace = true }
persephone-sdk = { workspace = true }

[tool.uv.workspace]
members = ["sdk", "plugins/persephone-plugin-sir-epidemic", "plugins/persephone-plugin-heat-diffusion", "plugins/persephone-plugin-us-county-epidemic", "plugins/persephone-plugin-market-stress", "plugins/persephone-plugin-dependency-workflow", "plugins/persephone-plugin-airline-delay", "plugins/persephone-plugin-river-flood"]

[tool.pytest.ini_options]
testpaths = ["tests", "sdk/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "sdk/src", "plugins/persephone-plugin-sir-epidemic/src", "plugins/persephone-plugin-heat-diffusion/src", "plugins/persephone-plugin-us-county-epidemic/src", "plugins/persephone-plugin-market-stress/src", "plugins/persephone-plugin-dependency-workflow/src", "plugins/persephone-plugin-airline-delay/src", "plugins/persephone-plugin-river-flood/src"]
