[project]
name = "persephone-sdk"
version = "0.1.0"
description = "Plugin SDK contracts for Persephone simulations."
requires-python = ">=3.11"
dependencies = ["numpy>=1.26"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone_sdk"]

