[project]
name = "persephone-plugin-airline-delay"
version = "0.1.0"
description = "Global airline delay propagation plugin for Persephone (OpenFlights top-500 airports)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "persephone",
    "persephone-sdk",
]

[project.entry-points."persephone.plugins"]
airline_delay = "persephone_airline_delay:AirlineDelayPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone_airline_delay"]

[tool.hatch.build.targets.wheel.force-include]
"src/persephone_airline_delay/data/airports.csv" = "persephone_airline_delay/data/airports.csv"
"src/persephone_airline_delay/data/routes.csv" = "persephone_airline_delay/data/routes.csv"
