[project]
name = "persephone-plugin-dependency-workflow"
version = "0.1.0"
description = "Synthetic dependency workflow graph plugin for Persephone."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "persephone-sdk",
]

[project.entry-points."persephone.plugins"]
dependency_workflow = "persephone_dependency_workflow:DependencyWorkflowPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone_dependency_workflow"]
