[project]
name = "persephone-plugin-heat-diffusion"
version = "0.1.0"
description = "2D heat diffusion PDE plugin for Persephone."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "persephone-sdk",
]

[project.entry-points."persephone.plugins"]
heat_diffusion = "persephone_heat_diffusion:HeatDiffusionPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone_heat_diffusion"]
