[project]
name = "persephone-plugin-market-stress"
version = "0.1.0"
description = "Synthetic market stress graph plugin for Persephone."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "persephone-sdk",
]

[project.entry-points."persephone.plugins"]
market_stress = "persephone_market_stress:MarketStressPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone_market_stress"]
