[project]
name = "persephone-plugin-river-flood"
version = "0.1.0"
description = "Mississippi basin river flood routing plugin for Persephone (USGS gauge network)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "persephone",
    "persephone-sdk",
]

[project.entry-points."persephone.plugins"]
river_flood = "persephone_river_flood:RiverFloodPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone_river_flood"]

[tool.hatch.build.targets.wheel.force-include]
"src/persephone_river_flood/data/gauges.csv" = "persephone_river_flood/data/gauges.csv"
"src/persephone_river_flood/data/network.csv" = "persephone_river_flood/data/network.csv"
