[project]
name = "persephone-plugin-sir-epidemic"
version = "0.1.0"
description = "SIR epidemic graph plugin for Persephone."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "persephone-sdk",
    "persephone",
]

[project.entry-points."persephone.plugins"]
sir_epidemic = "persephone_sir_epidemic:SIREpidemicPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone_sir_epidemic"]

[tool.hatch.build.targets.wheel.force-include]
"src/persephone_sir_epidemic/data/default_edges.csv" = "persephone_sir_epidemic/data/default_edges.csv"

