[project]
name = "persephone-plugin-us-county-epidemic"
version = "0.1.0"
description = "Real-world U.S. county adjacency epidemic plugin for Persephone."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "persephone",
    "persephone-sdk",
]

[project.entry-points."persephone.plugins"]
us_county_epidemic = "persephone_us_county_epidemic:USCountyEpidemicPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/persephone_us_county_epidemic"]

[tool.hatch.build.targets.wheel.force-include]
"src/persephone_us_county_epidemic/data/county_adjacency2023.txt" = "persephone_us_county_epidemic/data/county_adjacency2023.txt"
